7389 smbd: hung threads when session is terminated or disconnected Reviewed by: Matt Barden <matt.barden@nexenta.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Evan Layton <evan.layton@nexenta.com> Reviewed by: Vitaliy Gusev <gusev.vitaliy@gmail.com>